			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

================================
VERSION 5.6.18 (August 24, 2006)
================================

  * FIXED: format_time/3 can produce inconsistent results on first call.
    Keri Harris.

  * FIXED: Updated www_open_url for netscape compatible browsers on Unix.
    Cleanup of comments, etc.  Work-around lacking exit code of firefox
    -remote commands.

  * FIXED: Source-level debugger for a --> { x }, !, y.

  * FIXED: write_canonical(a|b).  Lukas Degener.

  * ADDED: Support for large integers in succ/2, plus/3 and between/3.
    Bart Demoen.

  * FIXED: Domain error on random/1.   Lukas Degener.

  * FIXED: pl-tai.c portability problem for Solaris (asctime_r). 
    Hazita Harun.

  * FIXED: Bug#192: reading non-decimal numbers that cause a 64-bit int
    overflow.  Marius Filip.

  * ENHANCED: Bug#195: library(debug) to compile debugging(x) to fail when -O
    is active.  Holger Kanwischer.

  * ADDED: print_message(silent, toplevel_goal(Goal, Bindings)) to allow
    intercepting toplevel goals just before they are executed.  Some
    cleanup to toplevel.pl and topvars.pl

  * FIXED: possible crash freeing a thread that could not be created
    due to conflicting alias.

  * FIXED: avoid errors in open while getting a stacktrace.  Mike
    Elston. 

  * FIXED: 1 is sin(pi/2) incorrectly succeeded in optimised mode.

  * MODIFIED: Message term of make/0 after completion has changed from
    make(done) to make(done(Files)).  Should not affect user-code.

  * ADDED: Library option, option/2.

  * DOC: Fixed all libraries to have their comments compatible with the
    emerging documentation package.

  * FIXED: stead-fastness of library predicate option/3.
