@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Renamed depreciated --> deprecated.  Mike Elston.
+
 ================================
 VERSION 5.6.18 (August 24, 2006)
 ================================
